@@ -62,6 +62,7 @@ class GoogleBot < Nadoka::NDK_Bot
     @count_default_lang  = @bot_config[:count_default_lang]  || ''
     google_wsdl = 'http://api.google.com/GoogleSearch.wsdl'
     @google = SOAP::WSDLDriverFactory.new(google_wsdl).create_driver
+    @google.generate_explicit_type = true
   end
   
   def on_privmsg prefix, ch, msg
@@ -82,7 +83,7 @@ class GoogleBot < Nadoka::NDK_Bot
         "googlec bot: #{googlec($1, $2)}"
       end
     rescue Exception => e
-      "google bot: #{e.class}(#{e.message})"
+      "google bot: #{e.class}(#{e.message} @ #{e.backtrace[0]})"
     end
   end
   
@@ -91,9 +92,9 @@ class GoogleBot < Nadoka::NDK_Bot
     word = search_char_code(word)
     
     result = @google.doGoogleSearch(
-      @google_key, word, cnt, 1, false, "", false, lang, 'utf-8', 'utf-8' )
+      @google_key, word, cnt, 1, false, "", false, lang, '', '' )
 
-    count = result.estimatedTotalResultsCount
+    count = result.estimatedTotalResultsCount.to_i
     if count > 0
       count = count.to_s.gsub(/(\d)(?=\d{3}+$)/, '\\1,')
       url   =  title = ''
@@ -150,7 +151,7 @@ class GoogleBot < Nadoka::NDK_Bot
       CGI.unescapeHTML(str.gsub(/\<.+?\>/, '')).tojis
     when 'NONE', 'UTF-8'
       begin
-        str = Iconv.conv("EUC-JP", "UTF-8", str)
+        str = Iconv.iconv("EUC-JP", "UTF-8", str).join
         CGI.unescapeHTML(str.gsub(/\<.+?\>/, '')).tojis
       rescue => e
         "(char code problem: #{e.class}[#{e.message.dump}])"
@@ -159,16 +160,16 @@ class GoogleBot < Nadoka::NDK_Bot
       str
     end
   end
-  
+ 
   def search_char_code str
     case $KCODE
     when 'EUC', 'SJIS'
       str.toeuc
     when 'NONE'
       begin
-        Iconv.conv("UTF-8", "EUC-JP", str.toeuc)
+        Iconv.iconv("UTF-8", "EUC-JP", str.toeuc).join
       rescue => e
-        "(char code problem: #{e.class})"
+        raise "(char code problem: #{e.class})"
       end
     when 'UTF-8'
       str
