@@ -1,6 +1,17 @@
 # ChangeLog of Nadoka($Rev$)
 # $Id$ 
 
+2005-09-30(Fri) 00:05:19 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* plugins/googlebot.nb : fix bugs
+
+	* plugins/dictbot.nb : support
+
+	* plugins/gonzuibot.nb : added
+
+	* ndk/config.rb : fix bugs
+
+
 2005-06-25(Sat) 19:02:24 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* nadoka.rb : output error information  to file
